[package]
name = "thymeline"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "implement"
] }

# For better error handling (optional but recommended)
anyhow = "1.0"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
strip = true